give z-index to header to prevent images from scrolling over top nav bar

--- a/main.scss
+++ b/main.scss
@@ -132,6 +132,7 @@ header {
   background-color: $background;
   box-shadow: 0 2px 4px -1px rgba(0,0,0,0.1), 0 4px 5px 0 rgba(0,0,0,0.07), 0 1px 10px 0 rgba(0,0,0,0.06);
   overflow: hidden;
+  z-index: 10;
   div.title {
     float: left;
     h1 {
